--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "@fontsource/space-grotesk": "^5.1.0",
     "next": "14.2.13",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-responsive-carousel": "^3.2.23"
   },
   "devDependencies": {
     "@types/node": "^20",
