--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@fontsource/space-grotesk": "^5.1.0",
+    "axios": "^1.7.7",
+    "cheerio": "^1.0.0",
     "next": "14.2.13",
     "react": "^18",
     "react-dom": "^18",
