--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 BRIGHT_DATA_USERNAME=brd-customer-hl_841c9fe9-zone-pricetracker
 BRIGHT_DATA_PASSWORD=xunfeso62m95
+
+MONGODB_URI=mongodb+srv://pricetracker:1212312121@cluster0.9gosf.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
