--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@fontsource/space-grotesk": "^5.1.0",
     "axios": "^1.7.7",
     "cheerio": "^1.0.0",
+    "mongodb": "^6.9.0",
+    "mongoose": "^8.6.4",
     "next": "14.2.13",
     "react": "^18",
     "react-dom": "^18",
