--- a/package.json
+++ b/package.json
@@ -10,17 +10,21 @@
   },
   "dependencies": {
     "@fontsource/space-grotesk": "^5.1.0",
+    "@headlessui/react": "^1.7.0",
+    "@heroicons/react": "^2.1.5",
     "axios": "^1.7.7",
     "cheerio": "^1.0.0",
     "mongodb": "^6.9.0",
     "mongoose": "^8.6.4",
     "next": "14.2.13",
+    "nodemailer": "^6.9.15",
     "react": "^18",
     "react-dom": "^18",
     "react-responsive-carousel": "^3.2.23"
   },
   "devDependencies": {
     "@types/node": "^20",
+    "@types/nodemailer": "^6.4.16",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "postcss": "^8",
